--- a/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
+++ b/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
@@ -12,8 +12,56 @@
 <body>
 <div th:replace="fragments/layout :: header"></div>
 <div class="container">
+    <h1>Cash Flow</h1>
+    <table>
+        <tbody>
+            <tr>
+                <td>
+                    <table id="dtBasicExample1" class="table table-dark table-striped table-hover table-borderless">
+                        <thead>
+                        <tr>
+                            <th scope="col">Name</th>
+                            <th scope="col">Portfolio</th>
+                            <th scope="col">Value</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="balanceList : ${balanceList6a}">
+                            <td th:text="${balanceList.name}"></td>
+                            <td th:text="${balanceList.portfolioName}"></td>
+                            <td th:text="${balanceList.value}"></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </td>
+                <td>&nbsp;&nbsp;&nbsp;</td>
+                <td>&nbsp;&nbsp;&nbsp;</td>
+                <td>&nbsp;&nbsp;&nbsp;</td>
+                <td>&nbsp;&nbsp;&nbsp;</td>
+                <td>
+                    <table id="dtBasicExample2" class="table table-dark table-striped table-hover table-borderless">
+                        <thead>
+                        <tr>
+                            <th scope="col">Name</th>
+                            <th scope="col">Portfolio</th>
+                            <th scope="col">Value</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="balanceList : ${balanceList6b}">
+                            <td th:text="${balanceList.name}"></td>
+                            <td th:text="${balanceList.portfolioName}"></td>
+                            <td th:text="${balanceList.value}"></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <br><br>
     <h1>Crytocurrencies</h1>
-        <table id="dtBasicExample" class="table table-dark table-striped table-hover">
+        <table id="dtBasicExample3" class="table table-dark table-striped table-hover">
             <thead>
                 <tr>
                     <th scope="col">Name</th>
@@ -21,15 +69,15 @@
                     <th scope="col">Value</th>
                     <th scope="col">Paid price</th>
                     <th scope="col">Current price</th>
-                    <th scope="col">%</th>
                     <th scope="col">Cost</th>
                     <th scope="col">P/L</th>
+                    <th scope="col">%</th>
                     <th scope="col">Low (24h)</th>
                     <th scope="col">High (24h)</th>
                     <th scope="col">Volume (24h)</th>
                     <th scope="col">Add/Edit/<a th:href="@{/bitstamp/delete}">Delete</a></th>
                     <th scope="col">Range</th>
-                    <th scope="col">Chart&nbsp<span class="iconify" data-icon="emojione:chart-increasing" /></th>
+                    <th scope="col">Chart&nbsp;<span class="iconify" data-icon="emojione:chart-increasing" /></th>
                 </tr>
             </thead>
             <tbody>
@@ -40,16 +88,16 @@
                         <td th:text="${balanceList.value}"></td>
                         <td th:text="${balanceList.paidPrice}"></td>
                         <td th:text="${balanceList.currentPrice}"></td>
-                        <td th:switch="${balanceList.profitOrLossPercentage}">
-                            <span th:case="'black'" th:text="${balanceList.priceUpDownPercent}"></span>
-                            <span th:case="'red'" th:style="'color:red'" th:text="${balanceList.priceUpDownPercent}"></span>
-                            <span th:case="'green'" th:style="'color:green'" th:text="${balanceList.priceUpDownPercent}"></span>
-                        </td>
                         <td th:text="${balanceList.amountSpendToBuy}"></td>
                         <td th:switch="${balanceList.profitOrLossPercentage}">
                             <span th:case="'black'" th:text="${balanceList.profitOrLossValue}"></span>
                             <span th:case="'red'" th:style="'color:red'" th:text="${balanceList.profitOrLossValue}"></span>
                             <span th:case="'green'" th:style="'color:green'" th:text="${balanceList.profitOrLossValue}"></span>
+                        </td>
+                        <td th:switch="${balanceList.profitOrLossPercentage}">
+                            <span th:case="'black'" th:text="${balanceList.priceUpDownPercent}"></span>
+                            <span th:case="'red'" th:style="'color:red'" th:text="${balanceList.priceUpDownPercent}"></span>
+                            <span th:case="'green'" th:style="'color:green'" th:text="${balanceList.priceUpDownPercent}"></span>
                         </td>
                         <td th:text="${balanceList.last24Low}"></td>
                         <td th:text="${balanceList.last24High}"></td>
@@ -311,26 +359,8 @@
         <p th:case="*" th:class="pagination">No pagination</p>
     </div>
     <br><br>
-    <h1>Cash Flow</h1>
-    <table id="dtBasicExample2" class="table table-dark">
-        <thead>
-        <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Portfolio</th>
-            <th scope="col">Value</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="balanceList : ${balanceList6}">
-            <td th:text="${balanceList.name}"></td>
-            <td th:text="${balanceList.portfolioName}"></td>
-            <td th:text="${balanceList.value}"></td>
-        </tr>
-        </tbody>
-    </table>
-    <br><br>
     <h1>Last Sold Cryptocurrencies</h1>
-    <table id="dtBasicExample3" class="table table-dark">
+    <table id="dtBasicExample4" class="table table-dark table-striped table-hover">
         <thead>
         <tr>
             <th scope="col">Date</th>
