--- a/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
+++ b/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
@@ -12,7 +12,7 @@
 <body>
 <div th:replace="fragments/layout :: header"></div>
 <div class="container">
-    <h1>Cash Flow</h1>
+    <h1>Cash flow</h1>
     <table>
         <tbody>
             <tr>
@@ -359,7 +359,7 @@
         <p th:case="*" th:class="pagination">No pagination</p>
     </div>
     <br><br>
-    <h1>Latest Bought And Sold Cryptocurrencies</h1>
+    <h1>Latest bought and sold Cryptocurrencies</h1>
     <table>
         <tbody>
             <tr>
@@ -369,7 +369,7 @@
                         <tr>
                             <th scope="col">Date</th>
                             <th scope="col">Name</th>
-                            <th scope="col">Sold Price</th>
+                            <th scope="col">Brought Price</th>
                             <th scope="col">Current Price</th>
                             <!--<th scope="col">Amount</th>-->
                             <th scope="col">Total</th>
