implement dropdown list for last sold and bought lists

--- a/src/main/webapp/WEB-INF/views/bitstamp/latestboughtandsoldcrypto.html
+++ b/src/main/webapp/WEB-INF/views/bitstamp/latestboughtandsoldcrypto.html
@@ -11,6 +11,58 @@
         <tbody>
         <tr>
             <td>
+                <table id="dtBasicExample104" class="table table-dark table-striped table-hover">
+                    <tbody>
+                        <tr>
+                            <!--<form th:target="_blank" th:action="@{/bitstamp/lastboughtcrypto}" th:object="${paidPriceObject}" method="POST">&ndash;&gt;-->
+                            <td>
+                                Select crypto name (buy):
+                            </td>
+                            <td>
+                                <select name="cryptoBoughtName" id="cryptoBoughtName">
+                                    <option th:each="cryptoNameBought : ${cryptoNameBoughtList}" th:value="${cryptoNameBought}" th:text="${cryptoNameBought}"></option>
+                                </select>
+                            </td>
+                            <td>
+                                <input type="submit" th:value="Generate" />
+                            </td>
+                            <!--</form>-->
+                        </tr>
+                    </tbody>
+                </table>
+            </td>
+            <td>&nbsp;&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;&nbsp;</td>
+            <td>
+                <table id="dtBasicExample105" class="table table-dark table-striped table-hover">
+                    <tbody>
+                        <tr>
+                            <!--<form th:target="_blank" th:action="@{/bitstamp/lastboughtcrypto}" th:object="${paidPriceObject}" method="POST">&ndash;&gt;-->
+                            <td>
+                                Select crypto name (sell):
+                            </td>
+                            <td>
+                                <select name="cryptoSoldName" id="cryptoSoldName">
+                                    <option th:each="cryptoNameSold : ${cryptoNameSoldList}" th:value="${cryptoNameSold}" th:text="${cryptoNameSold}"></option>
+                                </select>
+                            </td>
+                            <td>
+                                <input type="submit" th:value="Generate" />
+                            </td>
+                            <!--</form>-->
+                        </tr>
+                    </tbody>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <td>
                 <table id="dtBasicExample4" class="table table-dark table-striped table-hover">
                     <thead>
                     <tr>
