add iframe of Bitcoin rainbow chart as last section of the page

--- a/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
+++ b/src/main/webapp/WEB-INF/views/bitstamp/bitstamp.html
@@ -17,6 +17,10 @@
     <div th:replace="bitstamp/latestboughtandsoldcrypto :: latestboughtandsoldcrypto"></div>
     <br><br>
     <div th:replace="bitstamp/cashflow :: cashflow"></div>
+    <br><br>
+    <div>
+        <iframe src="https://www.blockchaincenter.net/static/rainbow-chart.html"  scrolling="no" style=" width: 100%; height: 650px; border: 0;  overflow: hidden;" frameBorder="0"></iframe>
+    </div>
 </div>
 <div th:replace="fragments/layout :: footer"></div>
 </body>
